# mini-dog-c

./: CMakeLists.txt  README.md  lexer.hpp  main.cpp  token.hpp
include/: common.h
src/: ast.c  ast.h  evaluator.c  evaluator.h  lexer.c  lexer.h  main.c  parser.c  parser.h  token.c  token.h
tests/: example.mdc  simple_fn.mdc  test_evaluator.c  test_lexer.c  test_parser.c
